--- a/.tmux.conf
+++ b/.tmux.conf
@@ -176,6 +176,9 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 
+set -g @resurrect-dir '~/.tmux_resurrect'
+set -g @resurrect-capture-pane-contents 'on'
+
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
