--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,6 +44,7 @@ set -g display-panes-time 800 # slightly longer pane indicators display time
 set -g display-time 1000      # slightly longer status messages display time
 
 set -g status-interval 10     # redraw status line every 10 seconds
+set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
 
 # clear both screen and history
 bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
@@ -179,6 +180,7 @@ set -g @continuum-boot 'on'
 
 set -g @resurrect-dir '~/.tmux_resurrect'
 set -g @resurrect-capture-pane-contents 'on'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
