--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,15 @@
+[submodule "plugins/tmux-sensible"]
+	path = plugins/tmux-sensible
+	url = https://git::@github.com/tmux-plugins/tmux-sensible
+[submodule "plugins/tmux-resurrect"]
+	path = plugins/tmux-resurrect
+	url = https://git::@github.com/tmux-plugins/tmux-resurrect
 [submodule "plugins/tmux-continuum"]
 	path = plugins/tmux-continuum
 	url = https://git::@github.com/tmux-plugins/tmux-continuum
 [submodule "plugins/vim-tmux-navigator"]
 	path = plugins/vim-tmux-navigator
 	url = https://git::@github.com/christoomey/vim-tmux-navigator
+[submodule "plugins/tpm"]
+	path = plugins/tpm
+	url = https://git::@github.com/tmux-plugins/tpm
